<resources>
    <string name="app_name">GPSAlarm</string>

    <string name="tab_my_alarms">My Alarms</string>
    <string name="tab_add_alarm">Add An Alarm</string>

    <string name="list_destination_label">Destination:</string>
    <string name="list_radius_label">Radius:</string>
    <string name="list_vibrate_label">Vibrate:</string>
    <string name="list_ringtone_label">Volume:</string>
    <string name="list_test">test text</string>

    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>

    <string name="detail_test">TEST</string>
    <string name="detail_stop">STOP</string>
    <string name="detail_create">CREATE ALARM</string>
    <string name="detail_too_large">Please keep your destination name under 30 characters!</string>

    <string name="sound_message">You are within range of your destination!</string>
    <string name="sound_button">STOP</string>

    <string name="location_not_enabled">We need to get your location to start an alarm! Please enable your
    location services in your settings.</string>
    <string name="multiple_alarms">Only one alarm can be active at once!</string>
    <string name="pausing_four">Resetting...</string>
    <string name="ready">Ready!</string>

    <string name="dialog_delete_title">Are you sure?</string>
    <string name="dialog_delete_text">Are you sure you want to delete this alarm?</string>

    <string name="notif_text">Your alarm to</string>
    <string name="notif_text_two">is running.</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="cd_mapview">Map displaying point on the map where your destination is located.</string>
    <string name="cd_zoom_in">Click here to make the map full screen.</string>
    <string name="cd_zoom_out">Click here to exit map full screen.</string>
    <string name="cd_destination">Enter a name for your destination here.</string>
    <string name="cd_radius_distance">Radius distance.</string>
    <string name="cd_radius_type">Radius type.</string>
    <string name="cd_vibrate">Check for vibrate.</string>
    <string name="cd_volume">Set your ringtone volume here.</string>
    <string name="cd_test">Button to test your ringtone and vibration settings</string>
    <string name="cd_create">Click here to create your alarm.</string>
    <string name="cd_stop">Click here to stop your alarm.</string>
    <string name="cd_list_destination">Your destination name.</string>
    <string name="cd_list_radius">Your alarm radius.</string>
    <string name="cd_list_vibrate">Your vibration setting.</string>
    <string name="cd_list_volume">Your volume level.</string>
    <string name="cd_list_activate">Click here to turn your alarm off or on.</string>
    <string name="cd_list_delete">Click here to delete your alarm.</string>
    <string name="cd_fab">Click here to create a new alarm.</string>
</resources>
