<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alarm_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.newwesterndev.gpsalarm.AlarmDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:elevation="8dp">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:elevation="8dp"
            android:enabled="true"
            android:contentDescription="@string/cd_mapview"/>

        <ImageButton
            android:id="@+id/zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:elevation="16dp"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_zoom_in_white_36dp"
            android:contentDescription="@string/cd_zoom_in"/>

        <ImageButton
            android:id="@+id/zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:elevation="16dp"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_zoom_out_white_36dp"
            android:visibility="gone"
            android:contentDescription="@string/cd_zoom_out"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:paddingTop="8dp"
                android:id="@+id/detail_destination_label"
                style="@style/ListHeadText"
                android:text="@string/list_destination_label"/>


            <LinearLayout android:weightSum="1">

            <EditText
                android:id="@+id/detail_destination"
                android:layout_height="wrap_content"
                android:layout_width="190dp"
                android:contentDescription="@string/cd_destination"/>

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="12dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_search_black_36dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/radius_label"
                style="@style/ListHeadText"
                android:text="@string/list_radius_label" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/distance_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/cd_radius_distance"/>

                <Spinner
                    android:id="@+id/distance_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/cd_radius_type"/>

            </LinearLayout>

            <TextView
                android:id="@+id/vibrate_label"
                style="@style/ListHeadText"
                android:text="@string/list_vibrate_label" />

            <CheckBox
                android:id="@+id/vibrate_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_vibrate"/>


            <TextView
                android:id="@+id/volume_label"
                style="@style/ListHeadText"
                android:text="@string/list_ringtone_label" />

            <SeekBar
                android:id="@+id/ringtone_volume"
                android:layout_width="200dp"
                android:paddingTop="8dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_volume"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:orientation="vertical">
        <Button
            android:id="@+id/test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:elevation="8dp"
            android:text="@string/detail_test"
            android:textColor="@android:color/white"
            android:contentDescription="@string/cd_test"/>

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorAccent"
            android:elevation="8dp"
            android:text="@string/detail_create"
            android:textColor="@android:color/white"
            android:contentDescription="@string/cd_create"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
