<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightGray"
    android:paddingLeft="5dp"
    android:paddingStart="5dp"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:id="@+id/list_destination_label"
            style="@style/ListText"
            android:text="@string/list_destination_label"/>

        <TextView
            android:id="@+id/list_destination_text"
            style="@style/ListText"
            android:text="@string/list_test"/>

        <TextView
            android:id="@+id/list_radius_label"
            style="@style/ListText"
            android:text="@string/list_radius_label"/>

        <TextView
            android:id="@+id/list_radius_text"
            style="@style/ListText"
            android:text="@string/list_test"/>

        <TextView
            android:id="@+id/list_vibrate_label"
            style="@style/ListText"
            android:text="@string/list_vibrate_label"/>

        <CheckBox
            android:id="@+id/list_vibrate_checkbox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_columnWeight="4"/>

        <TextView
            android:id="@+id/list_ringtone_label"
            style="@style/ListText"
            android:text="@string/list_ringtone_label"/>

        <SeekBar
            android:id="@+id/list_ringtone_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="32dp"
            android:paddingRight="32dp"
            android:layout_columnWeight="4"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:elevation="8dp"
            android:text="@string/off"/>

    </LinearLayout>

</LinearLayout>